# robo-trader

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  APPLICATION_MCP_ANALYSIS.md  ARCHITECTURAL_REFACTORING_PLAN.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_REVIEW.md  BACKEND_FRONTEND_INTEGRATION.md  CLAUDE.md  CLAUDE_AUTH_SETUP.md  COMPREHENSIVE_TESTING_PLAN.md  CRITICAL_ACTIONS.md  Claude_Analysis.md  DEPLOYMENT_CHECKLIST.md  DETAILED_TESTING_REPORT.md  Dockerfile  E2E_TEST_REPORT.md  E2E_TEST_REPORT_2025-10-26.md  E2E_TEST_REPORT_2025-10-26_UPDATED.md  FULL_STACK_DEBUGGER_MCP_INTEGRATION.md  HOOKIFY_HYBRID_APPROACH_SUMMARY.md  HOOKIFY_RULES_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LEARNING_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_IMPROVEMENTS_SUMMARY.md  MCP_AND_DEBUGGING_README.md  MCP_SERVER_DEBUGGING_GUIDE.md  MCP_TOOLS_PRACTICAL_EXAMPLES.md  MISSION.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PAPER_TRADING_QUICK_FIX.md  PAPER_TRADING_TEST_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_VERIFICATION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  (+34 more)
shared/robotrader_mcp/: CLAUDE.md  CODEBASE_ANALYSIS.md  DEPENDENCY_CHAIN_SOLUTION.md  EXECUTION_GUIDE.md  HYBRID_APPROACH.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  MCP_CONFIG_OPTIONS.md  MCP_SPEC_COMPLIANCE.md  MCP_USECASE.md  README.md  SANDBOX_ENHANCEMENTS_COMPLETED.md  SECURITY.md  SPECIFICATION_VERIFICATION.md  TOKEN_EFFICIENCY_VERIFICATION.md  UPGRADE_SUMMARY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  start_mcp_server.sh  tsconfig.json
shared/robotrader_mcp/config/: config.json  (+2 more)
(+1223 files in other folders)
