[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-trader-mcp"
version = "2.0.0"
description = "Robo-Trader Development MCP Server with Progressive Disclosure"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "Robo-Trader Development Team", email = "dev@robo-trader.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "model-context-protocol", "anthropic", "progressive-disclosure", "ai-tools"]

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/python-sdk"
Documentation = "https://github.com/modelcontextprotocol/python-sdk"
Repository = "https://github.com/modelcontextprotocol/python-sdk"
Issues = "https://github.com/modelcontextprotocol/python-sdk/issues"

[project.scripts]
robo-trader-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.pydantic-version]
plugin_version = "2.0"